--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "npm": "^6.0.0",
+    "npm": "^6.0.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
