--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "npm": "^6.0.1",
+    "ngx-restangular": "^3.0.0",
+    "npm": "^6.1.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
